--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
-    "winston": "^3.3.3"
+    "swagger-ui-express": "^4.1.6",
+    "winston": "^3.3.3",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "dotenv": "^10.0.0",
