--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^6.12.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
+    "nodemailer": "^6.6.3",
     "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3",
     "yamljs": "^0.3.0"
